Fixed the sizing and the spacing

--- a/css/max-640px.css
+++ b/css/max-640px.css
@@ -10,9 +10,142 @@
 }
 
 .medal{
-	width: 20%;
+	width: 50%;
+	position: fixed;
+	top: 25%;
+	left: 25%;
+	opacity: 0.3;
+}
+
+.uactiv{
+	width: 25%;
+	position: fixed;
+	left: 10%;
+	top: 7%;
+}
+
+.bombay{
+	width: 25%;
+	position: fixed;
+	left: 55%;
+	top: 1%;
+}
+
+.dots1{
+	width: 80%;
 	position: fixed;
 	top: 20%;
-	left: 40%;
-	opacity: 0.3;
+	left: 10%;
+}
+
+.ssu{
+	width: 100%;
+	color: #f3ec1a;
+	z-index: 1;
+	position: fixed;
+	top: 23%;
+	text-align: center;
+	font-size: 35px;
+	font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+	text-shadow: 2px 2px 0px rgba(245, 124, 0, 1);
+}
+
+.ssu1{
+	width: 100%;
+	color: white;
+	z-index: 1;
+	position: fixed;
+	top: 30%;
+	text-align: center;
+	font-size: 20px;
+	font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+	text-shadow: 2px 2px 0px rgba(245, 124, 0, 1);
+}
+
+.dots2{
+	width: 80%;
+	position: fixed;
+	top: 37%;
+	left: 10%;
+}
+
+.description{
+	width: 100%;
+	color: black;
+	z-index: 1;
+	position: fixed;
+	top: 40%;
+	text-align: center;
+	font-size: 18px;
+	font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+}
+
+
+.hashtag{
+	width: 100%;
+	color: #00544d;
+	z-index: 1;
+	position: fixed;
+	top: 50%;
+	text-align: center;
+	font-size: 40px;
+	font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+}
+
+
+
+.join{
+	position: fixed;
+	top: 61%;
+	left: 15%;
+	color: black;
+	padding: 20px;
+	width: 20%;
+	height: 2%;
+	text-align: center;
+	background: rgba(0,0,0,0);
+	border: 4px solid #fdf731;
+	border-radius: 20px;
+	text-decoration: none;
+	font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+	font-size: 10px;
+}
+
+.join:hover{
+	background: rgba(253,247,49,0.8);
+}
+
+.buddyup{
+	position: fixed;
+	top: 61%;
+	left: 55%;
+	color: black;
+	padding: 15px;
+	width: 20%;
+	text-align: center;
+	background: rgba(0,0,0,0);
+	border: 4px solid #fdf731;
+	border-radius: 20px;
+	text-decoration: none;
+	font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+	font-size: 10px;
+}
+
+.buddyup:hover{
+	background: rgba(253,247,49,0.8);
+}
+
+.apwig{
+	width: 15%;
+	position: fixed;
+	left: 30%;
+	bottom: 5%;
+}
+
+
+.thm{
+	width: 20%;
+	position: fixed;
+	left: 57%;
+	bottom: 5%;
 }
